Fixed root.scss (dont overflow under scroll bar on windows)

--- a/src/root.scss
+++ b/src/root.scss
@@ -16,6 +16,10 @@
     color: var(--text-light);
 }
 
+body {
+    overflow-x: hidden
+}
+
 a {
     color: var(--text-light);
     text-decoration: none;
